[tool.poetry]
name = "pydio"
version = "0.1.0"
description = "Simple and functional dependency injection toolkit for Python"
authors = [
    "Maciej Wiatrzyk <maciej.wiatrzyk@gmail.com>"
]
license = "MIT"
readme = "README.md"
documentation = "https://pydio.readthedocs.io"
repository = "https://github.com/mwiatrzyk/pydio"
keywords = ["dependency", "injection", "di", "framework", "toolkit", "tool", "library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.7.2,<4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.20.1"
mockify = "^0.13.1"
invoke = "^1.7.3"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.0.0"
commitizen = "^2.35.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.5"
isort = "^5.10.1"
yapf = "^0.32.0"
autoflake = "^1.7.7"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true
bump_message = "bump: $current_version -> $new_version"
version_files = [
    "pydio/__init__.py",
    "pyproject.toml"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
